--- a/src/components/Works.astro
+++ b/src/components/Works.astro
@@ -48,7 +48,7 @@ const projects: ProjectProps = [
 >
     <div
         class="absolute inset-0 opacity-[0.03] pointer-events-none"
-        style="background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/e/ec/World_map_blank_without_borders.svg/2000px-World_map_blank_without_borders.svg.png'); background-size: cover; background-position: center; filter: invert(1);"
+        style="background-image: url('/images/world_map.webp'); background-size: cover; background-position: center; filter: invert(1);"
     >
     </div>
 
