--- a/src/components/ui/About.astro
+++ b/src/components/ui/About.astro
@@ -67,7 +67,7 @@
         >
             <img
                 id="videoPoster"
-                src="https://bluecarpet.pe/wp-content/uploads/2022/04/construction-engineer-manager-supervising-progress-bts-station-tablet-with-blueprint-hands.jpg"
+                src="/images/portada_video.webp"
                 alt="Video Corporativo Grupo Vilchez"
                 class="absolute inset-0 w-full h-full object-cover z-10 transition-opacity duration-500"
                 loading="lazy"
