--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import Someone from "../components/Someone.astro";
 import Clients from "../components/Clients.astro";
 import Contact from "../components/Contact.astro";
 import Footer from "../components/Footer.astro";
-import Maquinarias from "../components/Maquinarias.astro";
+import Machinery from "../components/Machinery.astro";
 import Works from "../components/Works.astro";
 ---
 
@@ -15,7 +15,7 @@ import Works from "../components/Works.astro";
 	<About />
 	<Someone />
 	<Clients />
-	<Maquinarias />
+	<Machinery />
 	<Works />
 	<Contact />
 	<Footer />
